--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REPL for the Computable Protocol",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine ./**/*.spec.js"
+    "test": "jasmine ./**/*.spec.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
