--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine ./**/*.spec.js",
-    "start": "node server.js"
+    "server": "node server.js",
+    "repl": "node repl.js"
   },
   "repository": {
     "type": "git",
