Computable Repl Launcher (#4)
* Computable bash script

* cleanup the start file

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine ./**/*.spec.js",
-    "server": "node server.js",
-    "repl": "node repl.js"
+    "repl": "./start.sh"
   },
   "repository": {
     "type": "git",
